# llm-txt

./: .dockerignore  .env.aws  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_FRONTEND.md  Dockerfile.api  GITHUB_SECRETS_SETUP.md  MCP_API_MAPPING.md  MCP_README.md  Makefile  PAYMENT_SETUP.md  PUBLISHING.md  README.md  S3_DEPLOYMENT_GUIDE.md  SECURITY_FIXES.md  apprunner-create.json  apprunner.yaml  llm.full.txt  llm.txt  llms-full.txt  notes.md  openapi.yaml  permissions-policy.json  pyproject.toml  secrets-policy.json  test_improvements.py  test_output.txt  test_s3_persistence.py  trust-instance.json  trust-policy.json
.claude/commands/: fix-build.md  gen-llm-txt.md
.github/workflows/: SECURITY.md  check-setup.yml  deploy-api-ecr-apprunner.yml  deploy-frontend-amplify.yml  deploy.yml  publish.yml
configs/mcp/: claude.mcp.json  codex.mcp.json
llm_txt/: __init__.py  config.py
llm_txt/api/: __init__.py  app.py  auth.py  middleware.py  models.py
llm_txt/cli/: __init__.py  __main__.py  cli.py  llmxt.py
llm_txt/composer/: __init__.py  composer.py
llm_txt/crawler/: __init__.py  async_crawler.py  crawler.py  models.py  robots.py  sitemap.py  sync_wrapper.py
llm_txt/frameworks/: __init__.py  adapters.py  base.py  detector.py
llm_txt/github/: __init__.py  auth.py  pr.py
llm_txt/ingest/: __init__.py  ingestor.py
llm_txt/lint/: __init__.py  linter.py
llm_txt/mcp/: __init__.py  server.py
llm_txt/score/: __init__.py  scorer.py
llm_txt/worker/: __init__.py  job_manager.py  models.py  s3_storage.py
mcp-package/: package-lock.json  package.json
scripts/: deploy_api.sh  run-workflow.sh  setup-dynamodb-tables.sh  setup_actions_oidc.sh  setup_github_secrets.sh  test-mcp-install.sh  test_mcp_local.py
tests/: test_crawler.py
web/: .eslintrc.json  next.config.js  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/generate/: route.ts
web/app/api/generations/: route.ts
web/app/api/generations/[jobId]/: route.ts
web/app/api/generations/[jobId]/download/[fileType]/: route.ts
web/app/api/progress/[jobId]/: route.ts
web/app/status/[jobId]/: page.tsx
web/components/: credits-display.tsx  generator-card.tsx  generator-form.tsx  header.tsx  hero.tsx  job-steps.tsx  navigation.tsx  preview-panel.tsx  progress-tracker.tsx  theme-provider.tsx  theme-toggle.tsx  upgrade-modal.tsx
web/components/ui/: card.tsx
web/lib/: api.ts  credits.ts  theme-provider.tsx  types.ts  utils.ts  validators.ts
web_codex/: FRONTEND_IMPROVEMENTS.md  README.md  amplify.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web_codex/api/: client-with-retry.ts  client.ts
web_codex/app/: globals.css  layout.tsx  page.tsx
web_codex/app/api/entitlement/: route.ts
web_codex/app/api/webhook/: route.ts
web_codex/app/upgrade/success/: route.ts
web_codex/app/v1/generations/: route.ts
web_codex/app/v1/generations/[id]/: route.ts
web_codex/app/v1/generations/[id]/download/[file]/: route.ts
web_codex/components/: EmailModal.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorksGrid.tsx  InteractiveDemo.tsx  JobProgressDetails.tsx  PipelineDiagram.tsx  PreviewTabs.tsx  ProgressTerminal.tsx  ResultsPanel.tsx  UrlForm.tsx  ValueProps.tsx
web_codex/hooks/: useEmailModal.tsx  useJobPolling.ts  useLocalStorage.ts
web_codex/lib/: checkout.ts  db.ts  dodo.ts  rate-limit.ts  sessions.ts  upstream.ts
web_codex/types/: api.ts
web_codex/utils/: download.ts  format.ts
